--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native/new-app-screen": "0.81.4",
+    "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.2",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
+    "@babel/runtime": "^7.28.4",
     "@react-native-community/cli": "20.0.0",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
