--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-worklets": "^0.5.1",
     "react-redux": "^9.2.0"
   },
